objects/New_Part_Creation_Form__c.object
<CustomObject>
    <fields>
        <fullName>Primary_Device_AM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Device AM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NPC_Forms5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Process_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process ID</label>
        <referenceTo>Process__c</referenceTo>
        <relationshipName>New_Part_Creation_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_for_New_Part__c</fullName>
        <inlineHelpText>SFDC creates a new device record only for &quot;Retrofit&quot;, &quot;Retrofit + Add ROM Code&quot; and &quot;Others + Do you require to create a New Part? = Yes&quot; options.</inlineHelpText>
        <label>Reason for New Part</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Retrofit</fullName>
                    <default>true</default>
                    <label>Retrofit</label>
                </value>
                <value>
                    <fullName>Add ROM Code</fullName>
                </value>
                <value>
                    <fullName>Retrofit + Add ROM Code</fullName>
                </value>
                <value>
                    <fullName>CustomerNameChange</fullName>
                </value>
                <value>
                    <fullName>Fab to Fab Transfer</fullName>
                </value>
                <value>
                    <fullName>Change in PID</fullName>
                </value>
                <value>
                    <fullName>New Probe Card Flow</fullName>
                </value>
                <value>
                    <fullName>StartingMaterialChange</fullName>
                </value>
                <value>
                    <fullName>BackgrindThicknessChange</fullName>
                </value>
                <value>
                    <fullName>ShortLoop Flow</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Device Reactivation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_editing__c</fullName>
        <label>Reason for editing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rectile_Location__c</fullName>
        <label>Reticle Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GF</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reference_Id__c</fullName>
        <inlineHelpText>This Reference Id is used by the system for population of reference Mask Sets. Please select the Device that has the Mask sets closest to the new Device Id to minimize the manual update in the “Modified Mask” table.</inlineHelpText>
        <label>MES Reference Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Require_To_Create_The_New_Part__c</fullName>
        <inlineHelpText>Select &quot;Yes&quot; if a new part needs to be created.</inlineHelpText>
        <label>Do you require to create a New Part?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason_for_New_Part__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_Waiver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Risk Waiver Is Acknowledged By Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>STF_Activation_Steps__c</fullName>
        <label>STF Activation Steps</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Step 1</fullName>
                </value>
                <value>
                    <fullName>Step 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STF_Device_ID__c</fullName>
        <label>STF Device ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secure_Device__c</fullName>
        <label>Secure Device</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Email_CE_Rejection__c</fullName>
        <label>Send Email - CE Rejection</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Recall_Email_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Recall Email Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Reject_Email_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Reject Email Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skip_Final_Step__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Final Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tapeout_Required__c</fullName>
        <inlineHelpText>PTRF Submission Required value should be set to &quot;Yes&quot; if you are going to submit PTRF.</inlineHelpText>
        <label>PTRF Submission Required</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason_for_New_Part__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tapeout_Type__c</fullName>
        <label>Tapeout Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer MPW</fullName>
                </value>
                <value>
                    <fullName>GlobalShuttle MPW</fullName>
                </value>
                <value>
                    <fullName>Retrofit</fullName>
                    <default>true</default>
                    <label>Retrofit</label>
                </value>
                <value>
                    <fullName>Single Product</fullName>
                </value>
                <value>
                    <fullName>Full Layer Retrofit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>NPC Form</label>
    <listViews>
        <fullName>Draft_NPC</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Fab__c</columns>
        <columns>New_Part_ID__c</columns>
        <columns>Tapeout_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NPC_Form_Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>Draft NPC</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Executed</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Fab__c</columns>
        <columns>New_Part_ID__c</columns>
        <columns>Reason_for_New_Part__c</columns>
        <columns>Tapeout_Required__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NPC_Form_Status__c</field>
            <operation>equals</operation>
            <value>Executed</value>
        </filters>
        <label>Executed</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>In_Execution</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Fab__c</columns>
        <columns>New_Part_ID__c</columns>
        <columns>Reason_for_New_Part__c</columns>
        <columns>Tapeout_Required__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NPC_Form_Status__c</field>
            <operation>equals</operation>
            <value>In Execution</value>
        </filters>
        <label>In Execution</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Pending_CE_Approval</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Fab__c</columns>
        <columns>New_Part_ID__c</columns>
        <columns>BASE_Device_ID__c</columns>
        <columns>Tapeout_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NPC_Form_Status__c</field>
            <operation>equals</operation>
            <value>Pending CE Approval</value>
        </filters>
        <label>Pending CE Approval</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Portal_View_Do_Not_Delete</fullName>
        <columns>NAME</columns>
        <columns>BASE_Device__c</columns>
        <columns>Fab__c</columns>
        <columns>CRM_DID__c</columns>
        <columns>Device_Mask_Set_Title__c</columns>
        <columns>Account_Name__c</columns>
        <columns>NPC_Form_Status__c</columns>
        <columns>Reason_for_New_Part__c</columns>
        <columns>Tapeout_Required__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
        </filters>
        <label>NPC</label>
        <language>en_US</language>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>STF_Reactivation_NPC</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Fab__c</columns>
        <columns>Mask_Set_Title__c</columns>
        <columns>New_Part_ID__c</columns>
        <columns>NPC_Form_Status__c</columns>
        <columns>Reason_for_New_Part__c</columns>
        <columns>Tapeout_Required__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reason_for_New_Part__c</field>
            <operation>equals</operation>
            <value>STF Reactivation</value>
        </filters>
        <label>STF_Reactivation NPC</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>NPC-{YYYY}{MM}{DD}{0000}</displayFormat>
        <label>New Part Creation Form ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPC Forms</pluralLabel>
    <recordTypes>
        <fullName>StatusNotSubmitted</fullName>
        <active>true</active>
        <label>StatusNotSubmitted</label>
    </recordTypes>
    <recordTypes>
        <fullName>StatusRejected</fullName>
        <active>true</active>
        <label>StatusRejected</label>
    </recordTypes>
    <recordTypes>
        <fullName>StatusSubmitted</fullName>
        <active>true</active>
        <label>StatusSubmitted</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>